feat: update task management features with new task form and list components
- Refactored task form and list components to improve structure and usability.
- Added confirmation dialog for task deletion.
- Implemented filtering and sorting in task list.
- Enhanced styling for better user experience.
- Updated task service to handle API requests more efficiently.
- Added locale support for date formatting.
- Removed unused files and cleaned up codebase.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "taskmanager-backend",
+  "private": true,
+  "scripts": {
+    "api": "json-server --watch db.json --port 3000",
+    "api:nowatch": "json-server db.json --port 3000"
+  },
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
   }
